Preloader problem on structure page fixed, scrollbar modified, new VDA logo

--- a/styles/_scrollbar.scss
+++ b/styles/_scrollbar.scss
@@ -1,5 +1,5 @@
 ::-webkit-scrollbar {
-	width: 0.8rem;
+	width: 0.5rem;
 }
 
 ::-webkit-scrollbar-track {
